--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "lib": ["ES2020"],
     "types": ["node"],
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,   
+    "baseUrl": "./src",
+    "paths": { "*": ["*"] }
+
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
