--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^7.2.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "uuid": "^11.1.0",
@@ -32,6 +33,7 @@
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
     "prisma": "^6.15.0",
     "ts-node": "^10.9.2"
