--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
+    "redis": "^5.8.2",
     "slugify": "^1.6.6",
     "uuid": "^11.1.0",
     "zod": "^4.1.5"
@@ -44,6 +45,7 @@
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth2": "^0.1.10",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/redis": "^4.0.10",
     "prisma": "^6.15.0",
     "ts-node": "^10.9.2"
   }
