--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "commonjs",
     "types": ["node", "express"],
-    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "typeRoots": ["src/types", "./node_modules/@types"],
     "rootDir": "./src",
     "outDir": "./dist",
     "strict": true,
