--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/app.js",
-    "start:dev": "nodemon ./src/app.ts",
+    "start": "node ./dist/server.js",
+    "start:dev": "nodemon ./src/server.ts",
     "build": "tsc --build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --passWithNoTests"
   },
   "author": "",
   "license": "ISC",
@@ -41,6 +41,7 @@
     "@types/cors": "^2.8.19",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node-cache": "^4.1.3",
@@ -49,7 +50,11 @@
     "@types/passport-google-oauth2": "^0.1.10",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/redis": "^4.0.10",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.1.3",
     "prisma": "^6.15.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2"
   }
 }
