--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "types": ["node", "express"],
+    "types": ["node", "express", "jest", "supertest"],
     "typeRoots": ["src/types", "./node_modules/@types"],
     "rootDir": "./src",
     "outDir": "./dist",
