--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "pg": "^8.16.3",
     "redis": "^5.8.2",
     "slugify": "^1.6.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "zod": "^4.1.9"
   },
@@ -51,6 +53,8 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/redis": "^4.0.10",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^30.1.3",
     "prisma": "^6.15.0",
     "supertest": "^7.1.4",
