--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "@sendgrid/mail": "^8.1.5",
+    "@types/stripe": "^8.0.416",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
@@ -32,6 +33,7 @@
     "pg": "^8.16.3",
     "redis": "^5.8.2",
     "slugify": "^1.6.6",
+    "stripe": "^18.5.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
