--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@apidevtools/swagger-parser": "^10.0.3",
     "@prisma/client": "^6.14.0",
     "@sendgrid/mail": "^8.1.5",
     "@types/stripe": "^8.0.416",
@@ -35,7 +36,7 @@
     "redis": "^5.8.2",
     "slugify": "^1.6.6",
     "stripe": "^18.5.0",
-    "swagger-jsdoc": "^6.2.8",
+    "swagger-jsdoc": "^3.7.0",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "zod": "^4.1.9"
