--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth2": "^0.1.10",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/pg": "^8.15.5",
     "@types/redis": "^4.0.10",
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
     "jest": "^30.2.0",
     "prisma": "^6.15.0",
     "supertest": "^7.1.4",
