--- a/package.json
+++ b/package.json
@@ -15,7 +15,25 @@
     "@apidevtools/swagger-parser": "^10.0.3",
     "@prisma/client": "^6.14.0",
     "@sendgrid/mail": "^8.1.5",
+    "@types/axios": "^0.9.36",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
+    "@types/ejs": "^3.1.5",
+    "@types/express": "^5.0.4",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
+    "@types/node-cache": "^4.1.3",
+    "@types/nodemailer": "^7.0.1",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth2": "^0.1.10",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/pg": "^8.15.5",
+    "@types/redis": "^4.0.10",
     "@types/stripe": "^8.0.416",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
@@ -38,30 +56,13 @@
     "stripe": "^18.5.0",
     "swagger-jsdoc": "^3.7.0",
     "swagger-ui-express": "^5.0.1",
+    "typescript": "^5.9.3",
     "uuid": "^11.1.0",
     "zod": "^4.1.9"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
-    "@types/bcryptjs": "^3.0.0",
-    "@types/cookie-parser": "^1.4.10",
-    "@types/cors": "^2.8.19",
-    "@types/ejs": "^3.1.5",
-    "@types/express": "^5.0.4",
     "@types/jest": "^30.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/node-cache": "^4.1.3",
-    "@types/nodemailer": "^7.0.1",
-    "@types/passport": "^1.0.17",
-    "@types/passport-google-oauth2": "^0.1.10",
-    "@types/passport-google-oauth20": "^2.0.16",
-    "@types/pg": "^8.15.5",
-    "@types/redis": "^4.0.10",
     "@types/supertest": "^6.0.3",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.8",
-    "@types/uuid": "^10.0.0",
     "jest": "^30.2.0",
     "prisma": "^6.15.0",
     "supertest": "^7.1.4",
