--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
     "redis": "^5.8.2",
+    "sharp": "^0.34.4",
     "slugify": "^1.6.6",
     "stripe": "^18.5.0",
     "swagger-jsdoc": "^3.7.0",
@@ -62,6 +63,7 @@
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
+    "@types/sharp": "^0.31.1",
     "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
     "prisma": "^6.15.0",
