--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "google-auth-library": "^10.3.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.26",
     "multer": "^2.0.2",
     "node-cache": "^5.1.2",
     "nodemailer": "^7.0.6",
