resolve some problem

--- a/package.json
+++ b/package.json
@@ -1,39 +1,19 @@
 {
   "name": "back_end",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
     "start": "node ./dist/server.js",
     "start:dev": "nodemon ./src/server.ts",
-    "build": "tsc --build",
-    "test": "jest --passWithNoTests"
+    "build": "tsc --build"
   },
-  "author": "",
+  "author": "Mohamed",
   "license": "ISC",
-  "description": "",
+  "description": "Backend Ecommerce",
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.0.3",
     "@prisma/client": "^6.14.0",
     "@sendgrid/mail": "^8.1.5",
-    "@types/axios": "^0.9.36",
-    "@types/bcryptjs": "^3.0.0",
-    "@types/cookie-parser": "^1.4.10",
-    "@types/cors": "^2.8.19",
-    "@types/ejs": "^3.1.5",
-    "@types/express": "^5.0.4",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/node-cache": "^4.1.3",
-    "@types/nodemailer": "^7.0.1",
-    "@types/passport": "^1.0.17",
-    "@types/passport-google-oauth2": "^0.1.10",
-    "@types/passport-google-oauth20": "^2.0.16",
-    "@types/pg": "^8.15.5",
-    "@types/redis": "^4.0.10",
-    "@types/stripe": "^8.0.416",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.8",
-    "@types/uuid": "^10.0.0",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
@@ -56,20 +36,34 @@
     "sharp": "^0.34.4",
     "slugify": "^1.6.6",
     "stripe": "^18.5.0",
-    "swagger-jsdoc": "^3.7.0",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "typescript": "^5.9.3",
     "uuid": "^11.1.0",
     "zod": "^4.1.9"
   },
   "devDependencies": {
-    "@types/jest": "^30.0.0",
+    "@types/axios": "^0.9.36",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
+    "@types/ejs": "^3.1.5",
+    "@types/express": "^5.0.4",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
+    "@types/node-cache": "^4.1.3",
+    "@types/nodemailer": "^7.0.1",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/pg": "^8.15.5",
+    "@types/redis": "^4.0.10",
     "@types/sharp": "^0.31.1",
-    "@types/supertest": "^6.0.3",
-    "jest": "^30.2.0",
-    "prisma": "^6.15.0",
-    "supertest": "^7.1.4",
-    "ts-jest": "^29.4.4",
-    "ts-node": "^10.9.2"
+    "@types/stripe": "^8.0.416",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
+    "ts-node": "^10.9.2",
+    "nodemon": "^3.0.2",
+    "prisma": "^6.15.0"
   }
 }
