--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/ejs": "^3.1.5",
-    "@types/express": "^5.0.4",
+    "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node-cache": "^4.1.3",
     "@types/nodemailer": "^7.0.1",
     "@types/passport": "^1.0.17",
-    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/passport-google-oauth20": "^2.0.17",
     "@types/pg": "^8.15.5",
     "@types/redis": "^4.0.10",
     "@types/sharp": "^0.31.1",
@@ -62,8 +62,8 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^10.0.0",
-    "ts-node": "^10.9.2",
     "nodemon": "^3.0.2",
-    "prisma": "^6.15.0"
+    "prisma": "^6.15.0",
+    "ts-node": "^10.9.2"
   }
 }
