--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
+    "@types/node": "^24.10.1",
     "@types/node-cache": "^4.1.3",
     "@types/nodemailer": "^7.0.1",
     "@types/passport": "^1.0.17",
