--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
-    "express": "^5.1.0",
+    "express": "^4.21.1",
     "google-auth-library": "^10.3.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.26",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
@@ -48,9 +48,9 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/ejs": "^3.1.5",
-    "@types/express": "^5.0.5",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^24.10.1",
     "@types/node-cache": "^4.1.3",
     "@types/nodemailer": "^7.0.1",
@@ -66,5 +66,8 @@
     "nodemon": "^3.0.2",
     "prisma": "^6.15.0",
     "ts-node": "^10.9.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
