--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@ node_modules
 /aider
 dist/
 assets/
+
+# Logs
+*.log
+debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Crashpad dumps
+*.dmp
